main_header update

--- a/index.html
+++ b/index.html
@@ -3,39 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <title>Seok's Netbar</title>
+    <title>0xe82de</title>
     <script
       src="https://kit.fontawesome.com/c265cac622.js"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="/header.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar__logo">
-        <i class="fab fa-accusoft"></i>
-        <a href="">DreamCoding</a>
-      </div>
-
-      <ul class="navbar__menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Gallery</a></li>
-        <li><a href="">Weddings</a></li>
-        <li><a href="">FAQ</a></li>
-        <li><a href="">Bookings</a></li>
+    <!-- header -->
+    <nav class="header">
+      <!-- header-main -->
+      <div class="header-main"><a href="/index.html">0xe82de</a></div>
+      <!-- header-menu -->
+      <ul class="header-menu">
+        <li><a href="toDoList/toDoList.html">toDoList</a></li>
       </ul>
-
-      <ul class="navbar__icons">
-        <li><i class="fab fa-twitter"></i></li>
-        <li><i class="fab fa-facebook-f"></i></li>
+      <!-- header-icons -->
+      <ul class="header-icons">
+        <li>
+          <a href="https://velog.io/@0xe82de" target="_blank"
+            ><i class="fas fa-blog"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/kimkyoungseok" target="_blank"
+            ><i class="fab fa-instagram"> </i
+          ></a>
+        </li>
       </ul>
-
-      <a href="#" class="navbar__toggleBtn">
+      <!-- header-toggleBtn -->
+      <a href="#" class="header-toggleBtn">
         <i class="fas fa-bars"></i>
       </a>
     </nav>
