--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       src="https://kit.fontawesome.com/c265cac622.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/header.css" />
+    <link rel="stylesheet" href="/header/css-header/header.css" />
   </head>
   <body>
     <!-- header -->
     <nav class="header">
       <!-- header-main -->
-      <div class="header-main"><a href="/index.html">0xe82de</a></div>
+      <div class="header-main"><a href="">0xe82de</a></div>
       <!-- header-menu -->
       <ul class="header-menu">
         <li><a href="toDoList/toDoList.html">toDoList</a></li>
