--- a/header/header.html
+++ b/header/header.html
@@ -16,7 +16,7 @@
       <div class="header-main"><a href="/index.html">0xe82de</a></div>
       <!-- header-menu -->
       <ul class="header-menu">
-        <li><a href="/toDoList/toDoList.html">function</a></li>
+        <li><a href="/toDoList/toDoList.html">toDoList</a></li>
       </ul>
       <!-- header-icons -->
       <ul class="header-icons">
