--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       <div class="header-main"><a href="/index.html">0xe82de</a></div>
       <!-- header-menu -->
       <ul class="header-menu">
-        <li><a href="/toDoList/toDoList.html">toDoList</a></li>
+        <li><a href="./calculator/calculator.html">calculator</a></li>
+      </ul>
+      <ul class="header-menu">
+        <li><a href="./toDoList/toDoList.html">toDoList</a></li>
       </ul>
       <!-- header-icons -->
       <ul class="header-icons">
